# Winsock-App

Client/: .env  CMakeLists.txt
Client/include/: base64.h  pch.h
Client/include/Core/: Application.h  Client.h  StatusCode.h  UI.h  Window.h
Client/src/: base64.cpp  main.cpp
Client/src/Core/: Application.cpp  Client.cpp  UI.cpp  Window.cpp
Server/: CMakeLists.txt
Server/include/: StatusCode.h  pch.h
Server/include/Core/: Application.h  Server.h
Server/src/: main.cpp
Server/src/Core/: Action.cpp  Application.cpp  Server.cpp
